# pyeurec4a

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
eurec4a/: __init__.py
test/: test_metadata_availability.py
